# Detainer

./: .buildconfig  AUTHORS  README.md  meson.build
src/: Application.vala  Constants.vala  DetainerHandler.vala  GocryptHandler.vala  MainWindow.vala  MainWindow.vala~  StackManager.vala
src/Components/: DetainerSourceItem.vala  DetainerSourceList.vala  FieldEntry.vala  HeaderBar.vala  PersistentPlaceholderEntry.vala  SettingsItem.vala
src/Dialogs/: Alert.vala  Authenticate.vala
src/Views/: DetailsView.vala  DetainersView.vala  EmptyDetailsView.vala  SettingsView.vala  WelcomeView.vala
